# node-xattr

./: .gitignore  .npmignore  CMakeLists.txt  README.md  hello.js  main.d.ts  main.js  package.json
src/: mac_utils.h  mac_utils.mm  node_xattr.cc  workers.h
src/mac/: GMAvailability.h  GMFinderInfo.h  GMFinderInfo.m  GMResourceFork.h  GMResourceFork.m
tests/: spider-man.icns  test.js
